# codex-mcn-ops

./: .gitignore  README.md  REQUIREMENTS.md  pyproject.toml
docs/: adb-publishing-sop.md  device-calibration.md  material-collection-sop.md  platform-rules.md  prd.md  technical-spec.md
scripts/: adb-doctor.sh  daily-report.sh  publish-dry-run.sh  push-assets.sh
src/mcn_ops/: __init__.py  adb.py  cli.py  feishu.py  models.py  publisher.py  report.py  store.py
src/mcn_ops/adapters/: __init__.py  base.py  registry.py
src/mcn_ops/collection/: __init__.py  api_manifest.py  douyin_cookie.py  douyin_login_cookie.py  mock_tools.py  mxnzp_client.py  mxnzp_tools.py  runner.py  tools.py  understanding.py  workflows.py
tests/: test_adapters.py  test_cli.py  test_collection.py  test_feishu.py  test_report.py  test_store.py
workflows/: adb_publish.md  collect_materials.md  create_script.md  review_report.md
